2018-11-30  Ben Elliston  <bje@gnu.org>

	* texinfo.tex: Update to latest upstream version.
	* INSTALL: Likewise.

2018-11-29  Ben Elliston  <bje@gnu.org>

	* lib/framework.exp (istarget, ishost, istarget): Set the argument
	default value to the empty string.
	* doc/dejagnu.texi (find procedure): Remove reference to "NULL".
	(getenv procedure): Re-word this node.
	(isbuild procedure): Update.
	(ishost procedure): Likewise.
	(istarget procedure): Likewise.
	* testsuite/runtest.all/config.test: Add test cases.

2018-11-28  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to latest version.
	* config.sub: Likewise.

2018-11-28  Ben Elliston  <bje@gnu.org>

	* NEWS: Update.
	* configure.ac: Update version number.
	* configure: Regenerate.
	* doc/dejagnu.texi: Update version number.
	* runtest.exp: Update version number.

2018-11-28  Ben Elliston  <bje@gnu.org>

	* Makefile.am (TESTSUITE_FILES): Update filenames.
	* Makefile.in: Regenerate.

2018-11-28  Ben Elliston  <bje@gnu.org>

	* NEWS: Update.

	* doc/dejagnu.texi: Tidy up (fill) some paragraphs.

2018-11-25  Jacob Bachmeyer  <jcb62281@gmail.com>

	* lib/framework.exp: Clean up whitespace.

2018-11-25  Ben Elliston  <bje@gnu.org>

	* config/gdb-comm.exp: Clean up whitespace.
	* config/gdb_stub.exp: Likewise.
	* config/sid.exp: Likewise.
	* config/sim.exp: Likewise.
	* config/unix.exp: Likewise.

2018-11-23  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi (getdirs procedure): Improve documentation
	including documenting the -all option.
	(find procedure): Fix a typo.
	* lib/utils.exp (getdirs): Improve comments.

2018-11-22  Jacob Bachmeyer  <jcb62281@gmail.com>

	* runtest.exp: Ensure that multipass pass variables are always
	restored.  Previously, they were only restored if the "Go digging
	for tests" branch was taken near the end of runtest.exp.

2018-11-22  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi (Customizing DejaGnu): Document error handling